package com.hydrofish.app.nav

object NavTitle {
    const val HOME = "Home"
    const val HISTORY = "History"
    const val REMINDER = "Reminder"
    const val ACHIEVEMENTS = "Goals"
    const val SETTINGS = "Settings"
}